argocd/configuration/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #cert-manager.io/cluster-issuer: "cloudflare-issuer"
    #acme.cert-manager.io/dns01-provider: cloudflare
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              name: https
    host: argocd.127-0-0-1.nip.io
  #tls:
  #- hosts:
  #  - argocd.rruizsaiz.eu.org
  #  secretName: ingress-tls
